<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.Register">

        <TextView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:fontFamily="@font/alata"
            android:gravity="center"
            android:hint="@string/icon"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/guideline1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/diaryName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:textSize="14sp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/input_back"
                android:gravity="center_vertical"
                android:hint="@string/name_your_diary"
                android:inputType="textPersonName"
                />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:autofillHints="password"
                android:background="@drawable/input_back"
                android:gravity="center_vertical"
                android:hint="@string/pass"
                android:inputType="textPassword"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/Rbutton"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/pass"
            android:scaleType="centerCrop"
            android:background="@drawable/button1"
            android:text="@string/register"
            android:fontFamily="@font/alata"
            android:textColor="@color/white"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline1" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.65" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>