<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Main.customSplashActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guide1"
            app:layout_constraintVertical_bias="0">

            <TextView
                android:id="@+id/splash_Make"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_medium"
                android:text="@string/make"
                android:letterSpacing="0.15"
                android:textColor="#000000"
                android:textSize="40sp"
                android:textStyle="italic|bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/splash_linear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/splash_Make"
                app:layout_constraintTop_toBottomOf="@id/splash_Make">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_medium"
                    android:includeFontPadding="false"
                    android:text="@string/your"
                    android:layout_marginEnd="10dp"
                    android:letterSpacing="0.2"
                    android:textColor="#000000"
                    android:textSize="40sp"
                    android:textStyle="italic|bold" />

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/splash_day"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_medium"
                        android:text="@string/day"
                        android:letterSpacing="0.35"
                        android:layout_gravity="center_vertical"
                        android:textColor="#B3B3B3"
                        android:includeFontPadding="false"
                        android:textSize="40sp"
                        android:textStyle="italic|bold" />

                    <TextView
                        android:id="@+id/splash_diary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_medium"
                        android:text="@string/diary"
                        android:letterSpacing="0.35"
                        android:textColor="#000000"
                        android:includeFontPadding="false"
                        android:textSize="40sp"
                        android:textStyle="italic|bold"
                        android:visibility="invisible" />

                </FrameLayout>

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4066" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>