<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/homeMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/tertiary"
        tools:context=".Main.Fragments.Home.Home">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/MF_VP2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="-40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header_image" />

        <ImageView
            android:id="@+id/header_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="-17dp"
            android:background="@drawable/profile_banner"
            app:layout_constraintBottom_toBottomOf="@id/header_flow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/header_flow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:constraint_referenced_ids="msg,greetings"
            app:flow_horizontalAlign="start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alata"
            android:gravity="start"
            android:text="@string/hi"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/greetings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alata"
            android:text="@string/good_morning"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/profileCard"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="17dp"
            android:layout_marginBottom="17dp"
            app:cardCornerRadius="100dp"
            app:layout_constraintBottom_toBottomOf="@id/header_flow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/header_flow">

            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </androidx.cardview.widget.CardView>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/nu_bottomAppBarBackLay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1">

            <com.google.android.material.bottomappbar.BottomAppBar
                android:id="@+id/nu_bottomAppBarBack"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="1dp"
                app:backgroundTint="@color/black"
                app:fabAlignmentMode="center"
                app:fabAnchorMode="cradle"
                app:fabCradleMargin="20dp"
                app:fabCradleRoundedCornerRadius="50dp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0"
                android:contentDescription="@null"
                app:layout_anchor="@id/nu_bottomAppBarBack"
                app:layout_anchorGravity="center"
                app:shapeAppearance="@style/Widget.Design.FloatingActionButton" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/nu_bottomAppBarLay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1">

            <com.google.android.material.bottomappbar.BottomAppBar
                android:id="@+id/nu_bottomAppBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:backgroundTint="@color/tertiary"
                app:fabAlignmentMode="center"
                app:fabAnchorMode="cradle"
                app:fabCradleMargin="20dp"
                app:fabCradleRoundedCornerRadius="50dp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0"
                android:contentDescription="@null"
                app:layout_anchor="@id/nu_bottomAppBar"
                app:layout_anchorGravity="center"
                app:shapeAppearance="@style/Widget.Design.FloatingActionButton" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:backgroundTint="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="@id/nu_bottomAppBarLay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/nu_bottomAppBarLay"
            app:tabIconTint="@color/black"
            app:tabIndicatorColor="@color/primary"
            app:tabRippleColor="@null" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:contentDescription="@string/dodo"
            android:elevation="2dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_feather"
            app:backgroundTint="@color/primary"
            app:layout_constraintBottom_toTopOf="@id/nu_bottomAppBarLay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/nu_bottomAppBarLay"
            app:rippleColor="@color/white"
            app:shapeAppearance="@style/ThemeOverlay.Material3.FloatingActionButton.Primary"
            app:tint="@color/soothingBlack" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>